--- a/platformio.ini
+++ b/platformio.ini
@@ -53,6 +53,29 @@ lib_deps =
  	 arduino-libraries/ArduinoHttpClient@^0.4.0
  	 Hash = https://github.com/bbx10/Hash_tng.git
 
+[env:esp32doit-devkit-v1]
+ platform = espressif32
+ board = esp32doit-devkit-v1
+ framework = ${common.framework}
+ board_build.f_cpu = 80000000L
+ monitor_speed = ${common.monitor_speed}
+ extra_scripts = ${common.extra_scripts}
+ upload_speed = ${common.upload_speed}
+ platform_packages = 
+ 	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+ 	toolchain-xtensa32@~2.80400.0
+ lib_deps = 
+	 ${common.lib_deps}
+ 	 WiFiManager = https://github.com/tzapu/WiFiManager.git#v2.0.15-rc.1
+	 plerup/EspSoftwareSerial@^6.11.4
+	 fastled/FastLED@^3.5.0	
+	 adafruit/Adafruit BME680 Library@^2.0.1
+ 	 adafruit/Adafruit BMP280 Library@^2.6.1
+ 	 claws/BH1750@^1.2.0
+ 	 robtillaart/Max44009@^0.5.2
+ 	 arduino-libraries/ArduinoHttpClient@^0.4.0
+ 	 Hash = https://github.com/bbx10/Hash_tng.git
+
 [env:ESP8266]
 platform = espressif8266@2.6.3
 board = nodemcu
